<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search" translatable="true">Поиск</string>
    <string name="media" translatable="true">Медиатека</string>
    <string name="settings" translatable="true">Настройки</string>
    <string name="dark_theme" translatable="true">Темная тема</string>
    <string name="share_app" translatable="true">Поделиться приложением</string>
    <string name="text_support" translatable="true">Написать в поддержку</string>
    <string name="user_agreement" translatable="true">Пользовательское соглашение</string>
    <string name="placeholder_without_results" translatable="true">Ничего не нашлось</string>
    <string name="placeholder_server_error_title" translatable="true">Проблемы со связью</string>
    <string name="placeholder_server_error_loading" translatable="true">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh" translatable="true">Обновить</string>
    <string name="search_history_text" translatable="true">Вы искали</string>
    <string name="clear_search_history" translatable="true">Очистить историю</string>
    <string name="length" translatable="true">Длительность</string>
    <string name="album" translatable="true">Альбом</string>
    <string name="year" translatable="true">Год</string>
    <string name="genre" translatable="true">Жанр</string>
    <string name="region" translatable="true">Страна</string>
    <string name="null_track_duration">00:00</string>
    <string name="empty_media" translatable="true">Ваша медиатека пуста</string>
    <string name="empty_playlist" translatable="true">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist" translatable="true">Новый плейлист</string>
    <string name="playlists" translatable="true">Плейлисты</string>
    <string name="favorite_tracks" translatable="true">Избранные треки</string>
    <string name="playlist_name" translatable="true">Название*</string>
    <string name="playlist_description" translatable="true">Описание</string>
    <string name="create" translatable="true">Создать</string>
    <string name="add_to_playlist" translatable="true">Добавить в плейлист</string>
    <string name="already_in_playlist" translatable="true">Трек уже добавлен в плейлист %1$s</string>
    <string name="added_to_playlist" translatable="true">Добавлено в плейлист %1$s</string>
    <string name="delete_track_message" translatable="true">Хотите удалить трек?</string>
    <string name="no" translatable="true">Нет</string>
    <string name="yes" translatable="true">Да</string>
    <string name="cancel" translatable="true">Отмена</string>
    <string name="complete" translatable="true">Завершить</string>
    <string name="complete_playlist_message" translatable="true">Все несохраненные данные будут потеряны</string>
    <string name="complete_playlist_title" translatable="true">Завершить создание плейлиста?</string>
    <string name="empty_playlist_share_error" translatable="true">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share" translatable="true">Поделиться</string>
    <string name="edit_info" translatable="true">Редактировать информацию</string>
    <string name="delete_playlist" translatable="true">Удалить плейлист</string>
    <string name="delete_playlist_message" translatable="true">Хотите удалить плейлист «%s»? </string>
    <string name="edit_playlist_title" translatable="true">Редактировать</string>
    <string name="save_playlist_button" translatable="true">Сохранить</string>
    <string name="placeholder_no_tracks" translatable="true">В этом плейлисте нет треков</string>


    <plurals name="tracks_count" translatable="true">
        <item name="one" translatable="true" quantity="one">%d трек</item>
        <item name="few" translatable="true" quantity="few">%d трека</item>
        <item name="many" translatable="true" quantity="many">%d треков</item>
        <item name="other" translatable="true" quantity="other">%d треков</item>
    </plurals>
</resources>