<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".presentation.ui.settings.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolBar"
        android:layout_margin="@dimen/margin_4dp"
        app:title="@string/settings"
        app:titleTextAppearance="@style/titleStyle"
        style="@style/iconColorBlack"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/nightThemeSwitcher"
        style="@style/settingsStyle"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_24dp"
        android:paddingEnd="@dimen/margin_6dp"
        android:text="@string/dark_theme" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareApp"
        style="@style/settingsStyle"
        android:drawableEnd="@drawable/share"
        android:text="@string/share_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/supportMessage"
        style="@style/settingsStyle"
        android:drawableEnd="@drawable/support"
        android:text="@string/text_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userAgreement"
        style="@style/settingsStyle"
        android:drawableEnd="@drawable/arrow_forward"
        android:text="@string/user_agreement" />

</LinearLayout>