<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant" >

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4dp"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/titleStyle"
        app:titleTextColor="@color/white" />

    <Button
        style="@style/mainActivityButtons"
        android:id="@+id/search"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginHorizontal="@dimen/margin_22dp"
        android:text="@string/search"
        app:icon="@drawable/light_mode" />

    <Button
        style="@style/mainActivityButtons"
        android:id="@+id/media"
        android:layout_margin="@dimen/margin_22dp"
        android:text="@string/media"
        app:icon="@drawable/media" />

    <Button
        style="@style/mainActivityButtons"
        android:id="@+id/settingsButton"
        android:layout_marginHorizontal="@dimen/margin_22dp"
        android:layout_marginBottom="@dimen/margin_28dp"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout> 
