<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".presentation.ui.search.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/searchArrowBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4dp"
        app:title="@string/search"
        app:titleTextAppearance="@style/titleStyle"
        style="@style/iconColorBlack"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_8dp"
        android:paddingHorizontal="@dimen/text_indent">

    <EditText
        android:id="@+id/inputSearchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:paddingEnd="40dp"
        android:drawableStart="@drawable/search_14x14"
        android:drawablePadding="@dimen/margin_8dp"
        android:hint="@string/search"
        android:background="@drawable/search_background"
        android:maxLines="1"
        android:inputType="text"
        android:textAppearance="@style/regularText"
        android:textColor="@color/black"
        style="@style/searchStyle" />

    <ImageView
        android:id="@+id/clearIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/cancel_icon"
        android:layout_marginVertical="@dimen/margin_10dp"
        android:layout_marginEnd="@dimen/margin_12dp"
        android:visibility="gone"
        style="@style/searchStyle"/>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/placeholderWithoutTextMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_102dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder_without_results"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/mediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"
            android:text="@string/placeholder_without_results"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholderServerErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_102dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder_server_error"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/mediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:gravity="center"
            android:text="@string/placeholder_server_error_title"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/mediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_31dp"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:gravity="center"
            android:text="@string/placeholder_server_error_loading"/>

        <Button
            android:id="@+id/refreshButton"
            style="@style/refreshButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/refresh" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_140dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/searchHistoryView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="gone" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/searchHistoryTitle"
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/search_history_text"
                android:textSize="19sp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchHistoryRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchHistoryTitle"
                app:layout_constraintBottom_toTopOf="@+id/clearSearchHistoryButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearSearchHistoryButton"
                style="@style/refreshButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/margin_24dp"
                android:text="@string/clear_search_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchHistoryRecycler"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>