<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topPanel"
            style="@style/iconColorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4dp"
            app:title="@string/new_playlist"
            app:titleTextAppearance="@style/titleStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrow_back" />

        <FrameLayout
            android:id="@+id/imageContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_26dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topPanel">

            <View
                android:id="@+id/dashBorder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dash_rectangle" />

            <ImageView
                android:id="@+id/addPlaylistIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/add_photo_icon"
                android:scaleType="center" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/addPlaylistImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/RoundedCorners8" />

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlistNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:hint="@string/playlist_name"
            android:textColorHint="?attr/colorOnPrimary"
            app:endIconMode="none"
            app:hintTextAppearance="@style/hintRegularText"
            app:hintTextColor="?attr/colorSecondary"
            app:boxStrokeColor="@color/stroke_color_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPlaylistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/regularText"
                android:textColor="?attr/colorOnPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlistDescriptionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:hint="@string/playlist_description"
            android:textColorHint="?attr/colorOnPrimary"
            app:endIconMode="none"
            app:hintTextAppearance="@style/hintRegularText"
            app:hintTextColor="?attr/colorSecondary"
            app:boxStrokeColor="@color/stroke_color_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlistNameLayout" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPlaylistDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="@style/regularText"
                android:textColor="?attr/colorOnPrimary" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:letterSpacing="0"
            android:textColor="@color/white"
            android:backgroundTint="@color/create_button_selector"
            android:elevation="0dp"
            android:paddingVertical="12.5dp"
            android:layout_marginHorizontal="@dimen/margin_17dp"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_170dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlistDescriptionLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/titleStyle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>